                [x] - Update Links for Twitch It 3.0 to Codepen
                [x] - Update Link for Survey form, GitGuidance, Product Landing Page on Github
                [x] - Load images for Survey-form, Product landing page, and GitGuidance to postImgs.
                [x] - Include BulletinProject
        [] - Include Pull Request for Responsive version of Pubstandards?
    [] - Modify grid layout to include the FCC Certification and link to these projects.
    [] - Find a way to include a story style description of the project and how you made
            the project.  Create a better design to share a larger story paragraph.  
        //idea:\\ 
            [] - Remove the nesting <a> tags from each .item div.  
            [] - Remove the on-hover text from the entire project-details to 'click for details...'
            [] - onClick either takes us to another page with story-style screenshots and existing
                    technical details along with story of why, how, and what were the challenges and
                    how I overcame them (mini-resume job story).  Tell the story of your project in 
                    phases. Discovery. Exploration. Design.
                    (https://ux.shopify.com/how-to-level-up-your-portfolio-5795173a8f48)
            [] - Or a modal screen size with the same with an x icon in top corner.  
                [x] - Remove (for now) student course projects.  
    [] - Modify/improve/adapt current student projects.
    [] - Re-include these projects in your portfolio with a project story that focuses on   
            how you transformed the origin tutorial project.  
        [x] - Make sure you have font-weights imported.  Use a lighter font for h1 with name.  
        [x] - Maybe use Lato or another font.  
    [] - Make image flip on click and show a different image.  and the text from that.
    [] - Behind images are lower z-index.  Both front and background images rotate-x 180
    degrees.  animation.  