@@ -279,6 +279,38 @@ PHP Course
           </div>
         </div>
       
+        <div class="item">
+          <h4>Responsive Web Design Certificate F.C.C.</h4>
+          <div class="itemImg">
+            <a href="https://www.freecodecamp.org/gabester0" target="_blank">
+              <img src="https://i.postimg.cc/9FSTvCm4/Screenshot-80.png" class="shadow" alt="Gabe's GIT Guide" />
+
+              <div class="overlay">
+                <div class="hoverText">
+
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      
+      
+        <div class="item">
+          <h4>Responsive Bootstrap Front-End</h4>
+          <div class="itemImg">
+            <a href="#" target="_blank">
+              <img src="https://i.postimg.cc/HxzckCQC/Screenshot-105.png" class="shadow" alt="Gabe's GIT Guide" />
+
+              <div class="overlay">
+                <div class="hoverText">
+
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      
+
       <div class="item">
           <h4>Bulletin Project</h4>
           <div class="itemImg">
